01-VPC-CloudFormation/vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation Template for Creating VPC

Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      InstanceTenancy: "default"
      Tags:
        - Key: "Name"
          Value: "Sys-VPC"

  publicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "us-east-1a"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Public-Subnet
  publicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: "us-east-1b"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Public-Subnet-2

  privateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: Private-Subnet

  MyVpcSecurityGroups:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This Group is going to allow http and ssh through
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Allow-SSHandHTTP
      VpcId: !Ref myVPC
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP inbound to ALB
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80 
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: sysops-alb-sg

  MyIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: NewIGW

  IGWandVPCAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref MyIGW
      VpcId: !Ref myVPC

  MyRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: RoutingsubtoIGW

  MyRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWandVPCAttachment
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyIGW

  MySubRouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRouteTable
      SubnetId: !Ref publicSubnet
  MySubRouteAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRouteTable
      SubnetId: !Ref publicSubnet2
  
  MyEv2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}'
      InstanceType: t3.micro
      # IamInstanceProfile: Manage-Profile-Lab
      KeyName: ray-yrcs
      SecurityGroupIds:
        - !Ref MyVpcSecurityGroups
      SubnetId: !Ref publicSubnet
      Tags:
        - Key: Name
          Value: MyEc2Ins
        - Key: Version
          Value: "3"
Outputs:
  Ec2Export:
    Description: Exporting my EC2 ID
    Value: !Ref MyEv2
    Export: 
      Name: my-vpc-stack-EC2 
  PublicSubExport:
    Description: Exporting the Public Subnet ID
    Value: !Ref publicSubnet
    Export:
      Name: my-vpc-public-sub
  PublicSub2Export:
    Description: Exporting the Public Subnet ID
    Value: !Ref publicSubnet2
    Export:
      Name: my-vpc-public-sub2
  SGExport:
    Description: Exporting the Security Group Data
    Value: !Ref MyVpcSecurityGroups
    Export:
      Name: my-vpc-sg
  VpcExport:
    Description: Exporting VPC ID
    Value: !Ref myVPC
    Export: 
      Name: my-vpc-id
  ALBSGExport:
    Description: Exporting ALB Security Group
    Value: !Ref ALBSecurityGroup
    Export:
      Name: my-vpc-alb-sg
